--- a/MonitorApp/res/values/strings.xml
+++ b/MonitorApp/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">性能监控</string>
     <string name="selectApp">选择应用:</string>
-    <string name="description">不积跬步无以至千里  不积小流无以成江海</string>
+    <string name="description">录制工具(CPU MEM)</string>
     <string name="action_settings">Settings</string>
     <string name="title_RecordingActivity">RecordingActivity</string>
     <string name="recorder_ds">记得在录制之前启动需要测试的APP, 否则数据为空</string>
